<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/inventory" />
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan" />
    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_alerts"
        android:title="@string/alerts" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
